add rawstems support

--- a/notebooks/results-vdbo.ipynb
+++ b/notebooks/results-vdbo.ipynb
@@ -8,9 +8,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns  \n",
     "\n",
     "import wandb"
    ]
@@ -43,86 +40,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-drums-1359 finished\n",
-      "9rg6syhm MUSDB18HQDatasource\n",
-      "  ../results/9rg6syhm/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-other-1359 finished\n",
+      "2tx9mc4f MUSDB18HQDatasource\n",
+      "  ../results/2tx9mc4f/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-bass-1359 finished\n",
+      "lhtpigg8 MoisesDBDatasource\n",
+      "  ../results/lhtpigg8/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-other-1359 finished\n",
       "qtyn4z9v MUSDB18HQDatasource\n",
       "  ../results/qtyn4z9v/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vdbo-1359 finished\n",
       "xzslzg26 MoisesDBDatasource\n",
       "  ../results/xzslzg26/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vocals-1359 finished\n",
-      "4vxw0l1g MoisesDBDatasource\n",
-      "  ../results/4vxw0l1g/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-bass-1359 finished\n",
-      "lhtpigg8 MUSDB18HQDatasource\n",
-      "  ../results/lhtpigg8/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-other-1359 finished\n",
-      "qtyn4z9v MoisesDBDatasource\n",
-      "  ../results/qtyn4z9v/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vocals-1359 finished\n",
-      "4vxw0l1g MUSDB18HQDatasource\n",
-      "  ../results/4vxw0l1g/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vdbo-1359 finished\n",
       "xzslzg26 MUSDB18HQDatasource\n",
       "  ../results/xzslzg26/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-bass-1359 finished\n",
-      "lhtpigg8 MoisesDBDatasource\n",
-      "  ../results/lhtpigg8/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-other-1359 finished\n",
-      "2tx9mc4f MUSDB18HQDatasource\n",
-      "  ../results/2tx9mc4f/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vocals-1359 finished\n",
+      "4vxw0l1g MoisesDBDatasource\n",
+      "  ../results/4vxw0l1g/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-other-1359 finished\n",
       "2tx9mc4f MoisesDBDatasource\n",
       "  ../results/2tx9mc4f/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-drums-1359 finished\n",
       "9rg6syhm MoisesDBDatasource\n",
       "  ../results/9rg6syhm/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-bass-1359 finished\n",
+      "lhtpigg8 MUSDB18HQDatasource\n",
+      "  ../results/lhtpigg8/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-other-1359 finished\n",
+      "qtyn4z9v MoisesDBDatasource\n",
+      "  ../results/qtyn4z9v/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-drums-1359 finished\n",
+      "9rg6syhm MUSDB18HQDatasource\n",
+      "  ../results/9rg6syhm/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vocals-1359 finished\n",
+      "4vxw0l1g MUSDB18HQDatasource\n",
+      "  ../results/4vxw0l1g/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "vqbandit-mus64-l1snr-multi-adam-moisesdb-vdbo.yaml-9247 finished\n",
+      "  Error getting test set: 'NoneType' object is not subscriptable, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo.yaml-9247 finished\n",
       "  Error getting test set: 'NoneType' object is not subscriptable, skipping...\n",
       "vqbandit-mus64-l1snr-multi-adam-musdb18hq-vdbo.yaml-9247 finished\n",
       "  Error getting test set: 'NoneType' object is not subscriptable, skipping...\n",
       "bandmamba-mus64-l1snr-multi-adam-moisesdb-vdbo.yaml-9247 finished\n",
       "  Error getting test set: 'NoneType' object is not subscriptable, skipping...\n",
-      "vqbandit-mus64-l1snr-multi-adam-moisesdb-vdbo.yaml-9247 finished\n",
-      "  Error getting test set: 'NoneType' object is not subscriptable, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-drums-3076 finished\n",
-      "2nbtce70 MUSDB18HQDatasource\n",
-      "  ../results/2nbtce70/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-bass-6155 finished\n",
-      "w86ixw22 MoisesDBDatasource\n",
-      "  ../results/w86ixw22/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandroformer-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vdbo-7985 finished\n",
-      "3i6i6v60 MoisesDBDatasource\n",
-      "  ../results/3i6i6v60/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vocals-3076 finished\n",
-      "8akgy5kl MoisesDBDatasource\n",
-      "  ../results/8akgy5kl/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-bass-6155 finished\n",
+      "6932jblk MUSDB18HQDatasource\n",
+      "  ../results/6932jblk/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vocals-3076 finished\n",
       "8akgy5kl MUSDB18HQDatasource\n",
       "  ../results/8akgy5kl/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-drums-6155 finished\n",
-      "2nbtce70 MoisesDBDatasource\n",
-      "  ../results/2nbtce70/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-bass-6155 finished\n",
+      "6932jblk MoisesDBDatasource\n",
+      "  ../results/6932jblk/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandroformer-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vdbo-7985 finished\n",
       "3i6i6v60 MUSDB18HQDatasource\n",
       "  ../results/3i6i6v60/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-bass-6155 finished\n",
-      "6932jblk MUSDB18HQDatasource\n",
-      "  ../results/6932jblk/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
-      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-bass-6155 finished\n",
       "w86ixw22 MUSDB18HQDatasource\n",
       "  ../results/w86ixw22/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vocals-3076 finished\n",
+      "8akgy5kl MoisesDBDatasource\n",
+      "  ../results/8akgy5kl/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-bass-6155 finished\n",
-      "6932jblk MoisesDBDatasource\n",
-      "  ../results/6932jblk/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "w86ixw22 MoisesDBDatasource\n",
+      "  ../results/w86ixw22/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-drums-3076 finished\n",
+      "2nbtce70 MUSDB18HQDatasource\n",
+      "  ../results/2nbtce70/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-drums-6155 finished\n",
+      "2nbtce70 MoisesDBDatasource\n",
+      "  ../results/2nbtce70/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandroformer-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vdbo-7985 finished\n",
-      "0l0r6gav MoisesDBDatasource\n",
-      "  ../results/0l0r6gav/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
+      "3i6i6v60 MoisesDBDatasource\n",
+      "  ../results/3i6i6v60/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandroformer-mus64-l1snr-multi-adam-musdb18hq-vdbo-test-vdbo-7985 finished\n",
       "0l0r6gav MUSDB18HQDatasource\n",
       "  ../results/0l0r6gav/MUSDB18HQDatasource/detailed_results.csv exists, skipping...\n",
+      "bandroformer-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vdbo-7985 finished\n",
+      "0l0r6gav MoisesDBDatasource\n",
+      "  ../results/0l0r6gav/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
       "bandit-mus64-l1snr-multi-adam-moisesdb-vdbo-test-vdbo-9409 finished\n",
       "zune532k MoisesDBDatasource\n",
       "  ../results/zune532k/MoisesDBDatasource/detailed_results.csv exists, skipping...\n",
@@ -320,9 +317,7 @@
    "id": "2dcf2cfb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pprint import pprint"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -484,7 +479,7 @@
        "      <td>249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>xzslzg26</td>\n",
        "      <td>FixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -616,7 +611,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>lhtpigg8</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -627,7 +622,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>5</th>\n",
        "      <td>9rg6syhm</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -638,7 +633,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>0</th>\n",
        "      <td>2tx9mc4f</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -660,7 +655,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>9</th>\n",
        "      <td>w86ixw22</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -671,7 +666,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>10</th>\n",
        "      <td>2nbtce70</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -682,7 +677,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>qtyn4z9v</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -693,7 +688,7 @@
        "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>4vxw0l1g</td>\n",
        "      <td>SingleFixedStemBandit</td>\n",
        "      <td>RNNSeqBandModellingModule</td>\n",
@@ -757,7 +752,7 @@
        "17  23wth3uc        FixedStemBandit               MambaTFModel   \n",
        "12  zune532k        FixedStemBandit  RNNSeqBandModellingModule   \n",
        "18  9qspypvq        FixedStemBandit  RNNSeqBandModellingModule   \n",
-       "2   xzslzg26        FixedStemBandit  RNNSeqBandModellingModule   \n",
+       "3   xzslzg26        FixedStemBandit  RNNSeqBandModellingModule   \n",
        "19  3zkxq8iu        FixedStemBandit  RNNSeqBandModellingModule   \n",
        "21  uhnr1app        FixedStemBandit  RNNSeqBandModellingModule   \n",
        "22  gpxb68eo        FixedStemBandit  RNNSeqBandModellingModule   \n",
@@ -769,14 +764,14 @@
        "27  q601q181        FixedStemBandit  RNNSeqBandModellingModule   \n",
        "11  0l0r6gav        FixedStemBandit            RoFormerTFModel   \n",
        "8   3i6i6v60        FixedStemBandit            RoFormerTFModel   \n",
-       "4   lhtpigg8  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "0   9rg6syhm  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "5   2tx9mc4f  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "1   lhtpigg8  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "5   9rg6syhm  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "0   2tx9mc4f  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
        "13  gbsvyktp  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "7   w86ixw22  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "6   2nbtce70  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "1   qtyn4z9v  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
-       "3   4vxw0l1g  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "9   w86ixw22  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "10  2nbtce70  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "2   qtyn4z9v  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
+       "4   4vxw0l1g  SingleFixedStemBandit  RNNSeqBandModellingModule   \n",
        "16  zgjuty33  VectorDictQueryBandit  RNNSeqBandModellingModule   \n",
        "20  yqtx6ahs  VectorDictQueryBandit  RNNSeqBandModellingModule   \n",
        "15  7i7hesxl  VectorDictQueryBandit  RNNSeqBandModellingModule   \n",
@@ -787,7 +782,7 @@
        "17          MoisesDBDatasource           vdbo               False       l1snr   \n",
        "12         MUSDB18HQDatasource           vdbo               False       l1snr   \n",
        "18         MUSDB18HQDatasource           vdbo               False       l1snr   \n",
-       "2           MoisesDBDatasource           vdbo               False       l1snr   \n",
+       "3           MoisesDBDatasource           vdbo               False       l1snr   \n",
        "19          MoisesDBDatasource           vdbo               False       l1snr   \n",
        "21  MoisesDBStemWiseDatasource    vdbgpwbpooo               False       l1snr   \n",
        "22  MoisesDBStemWiseDatasource    vdbgpwbpooo               False   l1snr+dbm   \n",
@@ -799,14 +794,14 @@
        "27  MoisesDBStemWiseDatasource    vdbgpwbpooo                True  l1snrz+dbm   \n",
        "11         MUSDB18HQDatasource           vdbo               False       l1snr   \n",
        "8           MoisesDBDatasource           vdbo               False       l1snr   \n",
-       "4          MUSDB18HQDatasource           bass               False       l1snr   \n",
-       "0          MUSDB18HQDatasource          drums               False       l1snr   \n",
-       "5          MUSDB18HQDatasource          other               False       l1snr   \n",
+       "1          MUSDB18HQDatasource           bass               False       l1snr   \n",
+       "5          MUSDB18HQDatasource          drums               False       l1snr   \n",
+       "0          MUSDB18HQDatasource          other               False       l1snr   \n",
        "13         MUSDB18HQDatasource         vocals               False       l1snr   \n",
-       "7           MoisesDBDatasource           bass               False       l1snr   \n",
-       "6           MoisesDBDatasource          drums               False       l1snr   \n",
-       "1           MoisesDBDatasource          other               False       l1snr   \n",
-       "3           MoisesDBDatasource         vocals               False       l1snr   \n",
+       "9           MoisesDBDatasource           bass               False       l1snr   \n",
+       "10          MoisesDBDatasource          drums               False       l1snr   \n",
+       "2           MoisesDBDatasource          other               False       l1snr   \n",
+       "4           MoisesDBDatasource         vocals               False       l1snr   \n",
        "16         MUSDB18HQDatasource           vdbo               False       l1snr   \n",
        "20         MUSDB18HQDatasource           vdbo               False       l1snr   \n",
        "15          MoisesDBDatasource           vdbo               False       l1snr   \n",
@@ -817,7 +812,7 @@
        "17     99  \n",
        "12     99  \n",
        "18    249  \n",
-       "2      99  \n",
+       "3      99  \n",
        "19    249  \n",
        "21     99  \n",
        "22     99  \n",
@@ -829,14 +824,14 @@
        "27     99  \n",
        "11     99  \n",
        "8      99  \n",
-       "4      99  \n",
-       "0      99  \n",
-       "5      99  \n",
-       "13     99  \n",
-       "7      99  \n",
-       "6      99  \n",
        "1      99  \n",
-       "3      99  \n",
+       "5      99  \n",
+       "0      99  \n",
+       "13     99  \n",
+       "9      99  \n",
+       "10     99  \n",
+       "2      99  \n",
+       "4      99  \n",
        "16     99  \n",
        "20    249  \n",
        "15     99  \n",
@@ -1244,7 +1239,7 @@
    "outputs": [],
    "source": [
     "# dfg_vdbo = dfg[dfg.test_stem.isin(['vocals', 'drums', 'bass', 'other'])]\n",
-    "dfg_vdbo = dfg[dfg.test_set == \"MUSDB18HQDatasource\"]"
+    "dfg_vdbo = dfg[dfg.test_set == \"MoisesDBDatasource\"]"
    ]
   },
   {
